@@ -26,13 +26,13 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
+            <version>2.11.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.27.0-GA</version>
+            <version>3.29.2-GA</version>
         </dependency>
 
         <dependency>
@@ -84,6 +84,16 @@
                         <mainClass>de.qtc.beanshooter.Starter</mainClass>
                         <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                     </manifest>
+                    <manifestEntries>
+                        <Add-Opens>
+                            java.base/java.lang.reflect
+                            java.base/jdk.internal.misc
+                            java.rmi/java.rmi.server
+                            java.rmi/sun.rmi.server
+                            java.rmi/sun.rmi.transport
+                            java.rmi/sun.rmi.transport.tcp
+                        </Add-Opens>
+                    </manifestEntries>
                 </archive>
                 <descriptorRefs>
                   <descriptorRef>jar-with-dependencies</descriptorRef>
